<resources>
    <string name="app_name">AparatMovies</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="category">Category</string>
    <string name="favorite">Favorite</string>
    <string name="latest">Latest</string>
    <string name="setting">Setting</string>
    <string name="rate_app">Rate App</string>
    <string name="exit">Exit</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="new_videos">New Videos</string>
    <string name="special_videos">Special Videos</string>
    <string name="best_videos">Best Videos</string>
    <string name="search">Search</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="skip">Skip</string>
    <string name="register_success">ثبت نام به درستی انجام شد ..</string>
    <string name="login_success">ورود به برنامه به درستی انجام شد ..</string>
    <string name="register_failed">خطا در ثبت نام ..</string>
    <string name="login_failed">خطا در ورود به برنامه ..</string>
    <string name="your_favorite_videos">Your Favorite Videos</string>
    <string name="about_us">About Us</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="more_apps">More Apps</string>
    <string name="version_1_11">Version 1.11</string>
    <string name="views">Views : </string>
    <string name="description">Description</string>
    <string name="creator">Creator : </string>
</resources>