<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#2196F3"
        android:gravity="center"
        android:orientation="vertical"
        tools:context=".view.fragments.RegisterFragment">


        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edt_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_8sdp"
            android:background="#2196F3"
            android:gravity="center"
            android:hint="@string/username"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />


        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_8sdp"
            android:background="#2196F3"
            android:gravity="center"
            android:hint="@string/password"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/_8sdp">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_register"
                android:layout_width="0dp"

                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_8sdp"
                android:layout_weight="@integer/material_motion_duration_long_1"
                android:background="@drawable/bg_shape"

                android:text="@string/register"
                android:textColor="#2196F3" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_skip"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_8sdp"
                android:layout_weight="@integer/material_motion_duration_long_1"
                android:background="@drawable/bg_shape"
                android:text="@string/skip"
                android:textColor="#2196F3" />


        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_16sdp"
            android:background="@drawable/bg_shape"
            android:text="@string/login"
            android:textColor="#2196F3" />


    </LinearLayout>
</layout>