<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#E91E63"
        android:gravity="center"
        android:orientation="vertical"
        tools:context=".view.fragments.LoginFragment">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_margin="@dimen/_16sdp"
            android:id="@+id/txt_input_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edt_username"
                android:layout_margin="@dimen/_8sdp"
                android:hint="@string/username"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:background="#E91E63"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_margin="@dimen/_16sdp"
            android:id="@+id/txt_input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edt_password"
                android:layout_margin="@dimen/_8sdp"
                android:hint="@string/password"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:background="#E91E63"/>

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:padding="@dimen/_8sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_login"
                android:layout_margin="@dimen/_8sdp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textColor="#E91E63"
                android:background="@drawable/bg_shape"
                android:layout_weight="@integer/material_motion_duration_long_1"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_skip"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/skip"
                android:textColor="#E91E63"
                android:background="@drawable/bg_shape"
                android:layout_margin="@dimen/_8sdp"
                android:layout_weight="@integer/material_motion_duration_long_1"/>



        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_shape"
            android:text="@string/register"
            android:textColor="#E91E63"
            android:layout_margin="@dimen/_16sdp"
            android:id="@+id/btn_register"/>





    </LinearLayout>
</layout>