<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.fragments.SettingFragment">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#E91E63">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_baseline_arrow_back_24"
                    android:tint="@color/white"
                    android:id="@+id/img_back"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/txt_category_title"
                    android:textColor="@color/white"
                    android:layout_centerInParent="true"/>

            </RelativeLayout>


        </androidx.appcompat.widget.Toolbar>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_about_us"
            android:elevation="@dimen/_16sdp"
            app:cardElevation="@dimen/_16sdp"
            app:cardCornerRadius="@dimen/_8sdp"
            android:layout_margin="@dimen/_16sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/toolbar">

            <LinearLayout
                android:layout_margin="@dimen/_8sdp"
                android:paddingTop="@dimen/_8sdp"
                android:paddingBottom="@dimen/_8sdp"
                android:paddingLeft="@dimen/_8sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about_us"
                    android:textSize="@dimen/_18sdp"/>



            </LinearLayout>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_privacy_policy"
            android:elevation="@dimen/_16sdp"
            app:cardElevation="@dimen/_16sdp"
            app:cardCornerRadius="@dimen/_8sdp"
            android:layout_margin="@dimen/_16sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/card_about_us">



            <LinearLayout
                android:layout_margin="@dimen/_8sdp"
                android:paddingTop="@dimen/_8sdp"
                android:paddingBottom="@dimen/_8sdp"
                android:paddingLeft="@dimen/_8sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/privacy_policy"
                    android:textSize="@dimen/_18sdp"/>

            </LinearLayout>



        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_more_apps"
            android:elevation="@dimen/_16sdp"
            app:cardElevation="@dimen/_16sdp"
            app:cardCornerRadius="@dimen/_8sdp"
            android:layout_margin="@dimen/_16sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/card_privacy_policy">


            <LinearLayout
                android:layout_margin="@dimen/_8sdp"
                android:paddingTop="@dimen/_8sdp"
                android:paddingBottom="@dimen/_8sdp"
                android:paddingLeft="@dimen/_8sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/more_apps"
                    android:textSize="@dimen/_18sdp"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>




    </RelativeLayout>
</layout>