<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="video"
            type="com.tispunshahryar960103.aparatmovies.models.Video" />

        <variable
            name="creator"
            type="com.tispunshahryar960103.aparatmovies.models.Creator" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.fragments.PlayerFragment">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#E91E63">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_baseline_arrow_back_24"
                    android:tint="@color/white"
                    android:id="@+id/img_back"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/txt_category_title"
                    android:textColor="@color/white"
                    android:text="@{video.title}"
                    android:layout_centerInParent="true"/>

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/img_bookmark"
                    app:srcCompat="@drawable/ic_baseline_bookmark_border_24"
                    android:layout_alignParentRight="true"
                    android:tint="@color/white"
                    android:layout_marginRight="@dimen/_16sdp"/>


            </RelativeLayout>


        </androidx.appcompat.widget.Toolbar>


        <com.google.android.exoplayer2.ui.PlayerView
            android:id="@+id/exo_player"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_200sdp"
            android:layout_below="@id/toolbar"
            android:layout_centerInParent="true"
            android:focusable="true" />
        <LinearLayout
            android:id="@+id/linear_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/exo_player"
            android:layout_marginTop="@dimen/_16sdp">
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/views"
                android:textSize="@dimen/_14sdp"
                android:layout_marginLeft="@dimen/_16sdp"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{video.view}"
                android:textSize="@dimen/_14sdp"
                android:textColor="#E91E63"
                android:textStyle="bold"
                android:layout_marginLeft="@dimen/_16sdp"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{video.time}"
                android:textSize="@dimen/_14sdp"
                android:textColor="#E91E63"
                android:textStyle="bold"
                android:layout_marginStart="@dimen/_170sdp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_below="@id/linear_view"
            android:orientation="horizontal"
            android:id="@+id/linear_creator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/creator"
                android:textSize="@dimen/_14sdp"
                android:layout_marginLeft="@dimen/_16sdp"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{creator.title}"
                android:textSize="@dimen/_14sdp"
                android:textColor="#E91E63"
                android:textStyle="bold"
                android:layout_marginLeft="@dimen/_16sdp"/>







        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@id/linear_creator"
            android:layout_marginTop="@dimen/_16sdp">
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textSize="@dimen/_14sdp"
                android:textColor="@color/white"
                android:padding="@dimen/_12sdp"
                android:background="@drawable/bg_service"
                android:layout_marginLeft="@dimen/_16sdp"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{video.description}"
                android:textSize="@dimen/_14sdp"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/_16sdp"
                android:layout_marginLeft="@dimen/_16sdp"/>

        </LinearLayout>

    </RelativeLayout>
</layout>