<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:attrs="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:context=".view.fragments.HomeFragment">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_140sdp">

                <androidx.viewpager.widget.ViewPager
                    android:id="@+id/pager"
                    android:layout_centerInParent="true"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

                <com.rd.PageIndicatorView
                    android:id="@+id/pageIndicatorView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:piv_animationType="scale"
                    app:piv_dynamicCount="true"
                    app:piv_interactiveAnimation="true"
                    app:piv_selectedColor="#E91E63"
                    app:piv_unselectedColor="#2196F3"
                    app:piv_viewPager="@id/pager"
                    attrs:piv_padding="@dimen/_12sdp"
                    attrs:piv_radius="@dimen/_8sdp"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="@dimen/_12sdp"/>


            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/rel_new"
                android:layout_width="@dimen/_140sdp"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:background="@drawable/bg_service">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:gravity="center"
                    android:text="@string/new_videos"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_15ssp" />


            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_8sdp">


                <ProgressBar
                    android:id="@+id/progress_new_videos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:visibility="gone" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_new_videos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/rel_special"
                android:layout_width="@dimen/_140sdp"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:background="@drawable/bg_service">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:gravity="center"
                    android:text="@string/special_videos"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_15ssp" />


            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_8sdp">


                <ProgressBar
                    android:id="@+id/progress_special_videos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:visibility="gone" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_special_videos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rel_best"
                android:layout_width="@dimen/_140sdp"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:background="@drawable/bg_service">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:gravity="center"
                    android:text="@string/best_videos"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_15ssp" />


            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_8sdp">


                <ProgressBar
                    android:id="@+id/progress_best_videos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:visibility="gone" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_best_videos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </RelativeLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</layout>